--- a/geneticos/tp1/index.html
+++ b/geneticos/tp1/index.html
@@ -9,9 +9,15 @@
 	<header>
 		<h1>&fnof;(x) = (x &divide; 2<sup>30</sup> &minus; 1)<sup>2</sup>, x &isin; [0 ; 2<sup>30</sup> &minus; 1]</h1>
 	</header>
+	<select multiple="multiple" size="2">
+		<option value="las">la</option>
 
-	<div class="controls">
+		<option value="laa">la</option>
 
+		<option value="lad">la</option>
+
+		<option value="lass">la</option>
+	</select>
 		<div class="parameters">
 			<h2>Configuraci&oacute;n Inicial</h2>
 			<label>Crossover: <input type="number" id="crossover" value="75" min="0" max="100"></label>
