--- a/geneticos/tp1/index.html
+++ b/geneticos/tp1/index.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="main.js"></script>
 	<script type="text/javascript" src="excel/excellentexport.min.js"></script>
 </head>
-<body onload="main()">
+<body>
 	<header>
 		<h1>&fnof;(x) = (x &divide; 2<sup>30</sup> &minus; 1)<sup>2</sup>, x &isin; [0 ; 2<sup>30</sup> &minus; 1]</h1>
 	</header>
@@ -16,6 +16,7 @@
 			<label>Crossover: <input type="number" id="crossover" value="75" min="0" max="100"></label>
 			<label>Mutaci&oacute;n: <input type="number" id="mutacion" value="5" min="0" max="100"></label>
 			<label>Ciclos: <input type="number" id="ciclos" value="20" min="20"></label>
+			<label id="label-elitismo">Elitismo: <input type="checkbox" for="label-elitismo" id="elitismo"></label>
 		</div>
 
 		<div class="buttons">
