--- a/geneticos/tp1/index.html
+++ b/geneticos/tp1/index.html
@@ -42,7 +42,8 @@
 			<h2>Mejor Cromosoma</h2>
 			<p id="text-best-generation">Generaci&oacute;n: -</p>
 			<p id="text-best-objetive">F. Objetivo: -</p>
-			<p id="text-best-decimal">Valor: -</p>	
+			<p id="text-best-decimal">Valor: -</p>
+			<p id="text-best-cromosoma">Cromosoma: -</p>
 		</div>
 
 	</div>
