--- a/geneticos/tp3/index.html
+++ b/geneticos/tp3/index.html
@@ -7,5 +7,6 @@
 <h1>Problema del Viajante</h1>
 <a href="heuristica.html">Heuristica</a>
 <a href="algoritmo-genetico.html">Algoritmo Genético</a>
+<a href="mapa-mejor.html">Mapa Mejor</a>
 </body>
 </html>
